--- a/航贸网/Base.lproj/LaunchScreen.xib
+++ b/航贸网/Base.lproj/LaunchScreen.xib
@@ -16,7 +16,7 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" id="8ie-xW-0ye">
-                    <rect key="frame" x="71" y="647.99999821793847" width="272" height="69"/>
+                    <rect key="frame" x="71" y="648" width="272" height="69"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                     <string key="text">Copyright (c) 2014
 连云港港口集团通信信息工程公司</string>
